# TODO: Migrate this to pyproject.toml once PEP 621 is supported by setuptools
[metadata]
name = tpmmld
description = ThinkPad mute-mic light daemon
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rubin55/tpmmld
author = Rubin Simons
author_email = me@rubin55.org
license = GPLv3

[options]
install_requires =
    python-daemon >= 2.3.0
    python-dateutil >= 2.8.1
    pulsectl >= 22.3.2

packages = find:
package_dir = =src
python_requires >= 3.8

[options.packages.find]
where = src
include = *

[options.entry_points]
console_scripts =
    tpmmld = tpmmld.application:main
